# uv-workspace-hatchling-namespace-demo

./: README.md  demo.py  pyproject.toml
.github/workflows/: demo.yaml
task1/: pyproject.toml
task1/myproj/tasks/task1/: __init__.py
task1/tests/: test_foo.py
task2/myproj/tasks/task2/: __init__.py
